--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">Personas</string>
+    <string name="titulo">REGISTRO</string>
+    <string name="nombre">Nombre</string>
+    <string name="apellido">Apellido</string>
+    <string name="edad">Edad</string>
+    <string name="leer">Leer</string>
+    <string name="futbol">Futbol</string>
+    <string name="video_juegos">Video Juegos</string>
+    <string name="registrar">Registrar</string>
+    <string name="borrar">Borrar</string>
+    <string name="numero">No.</string>
+    <string name="pasa_tiempo">Pasa Tiempo</string>
 </resources>
