--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="numero">No.</string>
     <string name="pasa_tiempo">Pasa Tiempo</string>
     <string name="listar">Listar</string>
+    <string name="mensaje">Persona Guardada exitosamente!</string>
     <string-array name="opciones">
         <item>@string/registrar</item>
         <item>@string/listar</item>
